nobase_dist_pkgdata_DATA  = sbml/models/bd.xml
nobase_dist_pkgdata_DATA += sbml/models/cr.xml
nobase_dist_pkgdata_DATA += sbml/models/dd.xml
nobase_dist_pkgdata_DATA += sbml/models/hsr.xml
nobase_dist_pkgdata_DATA += sbml/models/me.xml
nobase_dist_pkgdata_DATA += sbml/models/vilar.xml
nobase_dist_pkgdata_DATA += sbml/models/convert-l2v3-l1v2.xsl
nobase_dist_pkgdata_DATA += sbml/models/kineticLaw.xsl
nobase_dist_pkgdata_DATA += sbml/models/Makefile
nobase_dist_pkgdata_DATA += sbml/schema/sbml-l1v2.xsd
nobase_dist_pkgdata_DATA += sbml/schema/sbml-l2v3.xsd
nobase_dist_pkgdata_DATA += sbml/schema/sbml-mathml.xsd
nobase_dist_pkgdata_DATA += include/univec.h
nobase_dist_pkgdata_DATA += include/reaction-stats.c
nobase_dist_pkgdata_DATA += include/cellmc.h
nobase_dist_pkgdata_DATA += include/support.h
nobase_dist_pkgdata_DATA += include/reaction-stats.h
nobase_dist_pkgdata_DATA += include/option-mapping.h
nobase_dist_pkgdata_DATA += include/sim-info.c
nobase_dist_pkgdata_DATA += include/types.h
nobase_dist_pkgdata_DATA += include/ia32/asmlog.c
nobase_dist_pkgdata_DATA += include/ia32/fpulog.c
nobase_dist_pkgdata_DATA += include/ia32/prec-single.h
nobase_dist_pkgdata_DATA += include/ia32/arch-support.h
nobase_dist_pkgdata_DATA += include/ia32/prec-double.h
nobase_dist_pkgdata_DATA += include/ia32/liblog.c
nobase_dist_pkgdata_DATA += include/app-support.c
nobase_dist_pkgdata_DATA += include/rsmt/rsmt-sse2.h
nobase_dist_pkgdata_DATA += include/rsmt/LICENSE.txt
nobase_dist_pkgdata_DATA += include/rsmt/params/19937.h
nobase_dist_pkgdata_DATA += include/rsmt/params/rsmt-params.h
nobase_dist_pkgdata_DATA += include/rsmt/rsmt.c
nobase_dist_pkgdata_DATA += include/rsmt/rsmt.h
nobase_dist_pkgdata_DATA += include/app-support.h
nobase_dist_pkgdata_DATA += include/sim-info.h
nobase_dist_pkgdata_DATA += include/cellmc.h
nobase_dist_pkgdata_DATA += include/final-population.h
nobase_dist_pkgdata_DATA += include/cell/support.h
nobase_dist_pkgdata_DATA += include/cell/spu/arch-support.h
nobase_dist_pkgdata_DATA += include/cell/ctrlblk.h
nobase_dist_pkgdata_DATA += include/cell/prec-single.h
nobase_dist_pkgdata_DATA += include/cell/debug_utils.h
nobase_dist_pkgdata_DATA += include/cell/summblk.h
nobase_dist_pkgdata_DATA += include/cell/ppu/main-mpi.c
nobase_dist_pkgdata_DATA += include/cell/ppu/main.c
nobase_dist_pkgdata_DATA += include/cell/ppu/ctrlblk.c
nobase_dist_pkgdata_DATA += include/cell/ppu/cb_utils.h
nobase_dist_pkgdata_DATA += include/option-mapping.c
nobase_dist_pkgdata_DATA += include/final-population.c
nobase_dist_pkgdata_DATA += include/error-macros.h
nobase_dist_pkgdata_DATA += xsl/kineticLaw.xsl
nobase_dist_pkgdata_DATA += xsl/neutral.xsl
nobase_dist_pkgdata_DATA += xsl/ia32/simd-double.xsl
nobase_dist_pkgdata_DATA += xsl/ia32/common.xsl
nobase_dist_pkgdata_DATA += xsl/ia32/simd-spfp-ssog.xsl
nobase_dist_pkgdata_DATA += xsl/ia32/pthread-first.xsl
nobase_dist_pkgdata_DATA += xsl/ia32/simd-single.xsl
nobase_dist_pkgdata_DATA += xsl/cell/simd+sso.xsl
nobase_dist_pkgdata_DATA += xsl/cell/kineticLaw.xsl
nobase_dist_pkgdata_DATA += xsl/cell/common.xsl
nobase_dist_pkgdata_DATA += xsl/cell/old.xsl
nobase_dist_pkgdata_DATA += xsl/cell/simd-sso.xsl
nobase_dist_pkgdata_DATA += xsl/cell/simd.xsl
